Fix double scrollbars caused by card image preview.

--- a/client/src/components/CardImagePreview/CardImagePreview.scss
+++ b/client/src/components/CardImagePreview/CardImagePreview.scss
@@ -8,5 +8,6 @@
         width: var(--card-image-preview-image-width);
         height: var(--card-image-preview-image-height);
         border-radius: 1rem;
+        vertical-align: middle;
     }
 }
